<resources>
    <string name="app_name">Inventory</string>

    <!-- login screen strings -->
    <string name="email_text">email</string>
    <string name="pass_text">password</string>
    <string name="login_text">LOGIN</string>
    <string name="forgot_password_text">FORGOT PASSWORD?</string>
    <string name="or_text">OR</string>
    <string name="register_text">New User? Register</string>

    <!-- OnBoarding Screens strings -->
    <string name="welcome_text">Welcome to Inventory!</string>
    <string name="first_screen_description">easiest way to do the inventory of your store or house!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_screen_text">Add your products!</string>
    <string name="second_screen_description_text">Press the add button to add a new product to your inventory list</string>
    <string name="third_screen_description">select a product from your list to update the image, quantity or description</string>
    <string name="third_screen_text">Update your product details</string>
    <string name="logout">LogOut</string>
    <string name="start_button">Start</string>
    <string name="save_button">save</string>
    <string name="Next_button">Next</string>
    <string name="product_name">Product</string>
    <string name="quantity_textview">Quantity</string>
    <string name="stock_price">Stock price</string>
    <string name="description_text">Description</string>
    <string name="product_example">Ex: pen</string>
    <string name="quantity_example">Ex: 10</string>
    <string name="stock_price_example">Ex: 3.5</string>
    <string name="description_example">Ex: black pen</string>
    <string name="cancel_button">Cancel</string>
</resources>