<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProductDetailFragment">

    <data>

        <variable
            name="productViewModel"
            type="com.github.mariemmezghani.inventory.viewModel.ProductViewModel" />

        <variable
            name="product"
            type="com.github.mariemmezghani.inventory.database.Product" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Using ConstraintLayout as our EditTexts will scale dynamically to content inside them -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/rubik"
                android:hint="@string/product_example"
                android:inputType="textPersonName"
                android:text="@={product.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_name_textview" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_edittext">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_rot"
                    android:fontFamily="@font/rubik_medium"
                    android:onClick="@{()-> productViewModel.onCancel()}"
                    android:text="@string/cancel_button"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_green"
                    android:fontFamily="@font/rubik_medium"
                    android:onClick="@{()->productViewModel.onAddProduct(product)}"
                    android:text="@string/save_button"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/product_name_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/product_name"
                android:textColor="@color/color_primary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/quantity_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/quantity_textview"
                android:textColor="@color/color_primary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_name" />

            <EditText
                android:id="@+id/quantity_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/rubik"
                android:hint="@string/quantity_example"
                android:inputType="number"
                android:text="@={`` + product.quantity}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity_textview" />

            <TextView
                android:id="@+id/stock_price_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/stock_price"
                android:textColor="@color/color_primary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity_edittext" />

            <EditText
                android:id="@+id/stock_price_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/rubik"
                android:hint="@string/stock_price_example"
                android:inputType="number"
                android:text="@={`` + product.stock_price}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stock_price_textview" />

            <TextView
                android:id="@+id/description_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/description_text"
                android:textColor="@color/color_primary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stock_price_edittext" />

            <EditText
                android:id="@+id/description_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/rubik"
                android:hint="@string/description_example"
                android:inputType="textMultiLine|textPersonName"
                android:text="@={product.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>